# codespawn

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: rust.yml
examples/: config.json  config.lua  config.xml  json.rs  lua.rs  rust.json  rust.xml  sample.json  sample.lua  sample.xml  sample2.json  test.rs  types.xml  xml.rs
src/: error.rs  fmt_code.rs  json_parser.rs  lib.rs  lua_parser.rs  raw_code.rs  xml_parser.rs
src/string_gen/: cpp.rs  keywords.rs  mod.rs  rust.rs
tests/: dummy_cfg.json  lib.rs  malformed_cfg.xml
