[package]
name = "codespawn"
version = "0.1.0"
description = "Code generator written in Rust"
keywords = ["codegen", "gencode", "code", "generator"]
license = "MIT/Apache-2.0"
authors = ["Krzysztof Kondrak <krzysztof.kondrak@gmail.com>"]
repository = "https://github.com/kondrak/codespawn"
homepage = "https://github.com/kondrak/codespawn"

[dependencies]
xml-rs = "0.3"
json = "0.8"