[package]
name = "codespawn"
version = "0.3.2"
description = "C++ and Rust code generator. Supports XML and JSON for API definitions."
keywords = ["code", "generator", "codegen", "gencode"]
license = "MIT/Apache-2.0"
authors = ["Krzysztof Kondrak <krzysztof.kondrak@gmail.com>"]
repository = "https://github.com/kondrak/codespawn"
homepage = "https://github.com/kondrak/codespawn"
documentation = "https://docs.rs/codespawn"

[dependencies]
xml-rs = "0.3"
json = "0.10"